# python3-learning

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GITHUB_PUSH_GUIDE.md  LICENSE  PUSH_SUMMARY.md  README.md  SETUP_GITHUB.md  check_ci_status.sh  check_python_version.py  demo.py  demo2.py  demo3.py  docker-compose.yml  docker-run.sh  push_ssh.sh  push_to_github.sh  push_via_api.sh  push_with_env.sh  push_with_token.sh  push_with_token_simple.sh  pyproject.toml  pytest.ini  readme.txt  requirements-dev.txt  requirements.txt  run.py  run_tests.sh  run_web_simple.sh  setup_dev.sh  setup_venv.sh  start.sh  test_ci.sh  validate_ci.sh
.github/workflows/: code-quality.yml  test.yml
examples/basics/: data_types.py  python_fundamentals.py  python_fundamentals_auto.py
projects/reimbursement-system/: .gitignore  main.py  requirements_fixed.txt
projects/reimbursement-system/src/frameworks/api/: fastapi_app.py
projects/reimbursement-system/src/use_cases/audit/: audit_reimbursement.py
projects/reimbursement-system/src/use_cases/classify/: classify_expense.py
reimbursement-clean-arch-python/: requirements.txt
reimbursement-clean-arch-python/src/domain/entities/: bill.py  notification.py
reimbursement-clean-arch-python/src/frameworks/config/: settings.py
reimbursement-clean-arch-python/src/interface_adapters/invoice/: invoice_adapter.py
reimbursement-clean-arch-python/src/interface_adapters/llm/: spark_llm_adapter.py
reimbursement-clean-arch-python/src/interface_adapters/repositories/: bill_repository.py
reimbursement-clean-arch-python/src/use_cases/dispatcher/: process_reimbursement.py
scripts/: create_project.sh  github_push.sh  run_all_examples.py  run_examples.py
tests/: test_basic.py  test_ci_simple.py
tests/unit/basics/: test_python_fundamentals.py
tests/unit/utils/: test_file_utils.py
utils/: file_utils.py
